--- a/num2word/templates/index.html
+++ b/num2word/templates/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lovelo&display=swap" rel="stylesheet">
     <style>
         body {
-            background-color: #F7EBE8; /* Color inspirado en el álbum "Lover" de Taylor Swift */
+            background-color: #F7EBE8; 
             font-family: 'Lovelo', cursive;
             text-align: center;
             font-size: 1.7em;
@@ -20,7 +20,7 @@
             height: 100%;
         }
         h1 {
-            color: #D3A392; /* Color inspirado en el álbum "Lover" de Taylor Swift */
+            color: #D3A392; 
             margin-bottom: 30px;
             font-size: 3.5em;
         }
@@ -54,14 +54,14 @@
         }
         .imagen-esquina.izquierda {
             left: 20px;
-            background-image: url('static/lover1.png'); /* Cambia la URL de la imagen para la esquina izquierda */
+            background-image: url('static/lover1.png'); 
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center;
         }
         .imagen-esquina.derecha {
             right: 20px;
-            background-image: url('static/lover2.png'); /* Cambia la URL de la imagen para la esquina derecha */
+            background-image: url('static/lover2.png'); 
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center;
